added link and changed NN notebook structure

--- a/NN.ipynb
+++ b/NN.ipynb
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Pre-processing For Deep Neural Networks\n",
+    "## 1. Data Pre-processing For Deep Neural Networks\n",
     "Right now, the data and targets are conained in a pandas dataframe.\n",
     "In order to train a keras model, we need to convert the tweets into a list of integers representing all the words and convert the sentiment targets into binary values.\n",
     "### Tweets\n",
@@ -156,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating the Model\n",
+    "## 2. Creating the Model\n",
     "We experimented using two different models: a CNN and an LSTM model. We trained each model using the same data and tried using pre-trained and self-trained Embedding layers\n",
     "### LSTM\n",
     "The LSTM model consists of:\n",
@@ -254,8 +254,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training the Model\n",
-    "We trained the model using a dictionary size of 25000. After pre-processing the data and creating the model, we train it using a batch size of 20 in order to make it a bit faster without losing too much in accuracy. The train data is split into 90% train and 10% validation. The model is trained for 2 epochs, because after three epochs, the model starts to overfit on the data."
+    "## 3. Splitting and Padding the Data\n",
+    "We create a dictionary with the 10000 most common words. The tweets are then transformed using the dictionart, split into training and testing data and padded up to a given size."
    ]
   },
   {
@@ -265,7 +265,8 @@
    "outputs": [],
    "source": [
     "# Some variables used for pre-processing the data\n",
-    "dictionary_size=10000"
+    "dictionary_size=10000\n",
+    "padding_size=25"
    ]
   },
   {
@@ -286,7 +287,15 @@
    "outputs": [],
    "source": [
     "#split and pad the data\n",
-    "train_data, train_targets, test_data, test_targets, max_tweet_length = split_padded_data(input_data, seed, 25)"
+    "train_data, train_targets, test_data, test_targets, max_tweet_length = split_padded_data(input_data, seed, padding_size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Training the Model\n",
+    "After pre-processing the data and creating the model, we train it using a batch size of 50 in order to make it a bit faster without losing too much in accuracy. The train data is split into 90% train and 10% validation. The model is trained for multiple epochs and it's different for each model."
    ]
   },
   {
@@ -802,7 +811,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Results"
+    "## 5. Results\n",
+    "The results are analysed using the unseen test set that was removed before training the model."
    ]
   },
   {
@@ -959,7 +969,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Here is some extra data analysis we used\n",
+    "## 6. Here is some extra data analysis we used\n",
     "We plotted the distribution of tweet lengths and found out that most of the tweets are between the 2 and 20 tokens long. We used this to choose the maximum input length of a tweet."
    ]
   },
