Uploading changes to basemodels - including unused PCA section
Signed-off-by: CorEng <cormacenglish@gmail.com>

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -2,9 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E:\\Anaconda\\envs\\dl\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:526: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "E:\\Anaconda\\envs\\dl\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:527: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "E:\\Anaconda\\envs\\dl\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:528: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "E:\\Anaconda\\envs\\dl\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:529: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "E:\\Anaconda\\envs\\dl\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:530: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "E:\\Anaconda\\envs\\dl\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:535: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
+     ]
+    }
+   ],
    "source": [
     "#Authors: Adam Lewandowski, Ivan Sladkov, Patrick English\n",
     "import numpy as np\n",
@@ -22,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +75,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1467810369</td>\n",
        "      <td>Mon Apr 06 22:19:45 PDT 2009</td>\n",
@@ -65,7 +84,7 @@
        "      <td>@switchfoot http://twitpic.com/2y1zl - Awww, t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1467810672</td>\n",
        "      <td>Mon Apr 06 22:19:49 PDT 2009</td>\n",
@@ -74,7 +93,7 @@
        "      <td>is upset that he can't update his Facebook by ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>1467810917</td>\n",
        "      <td>Mon Apr 06 22:19:53 PDT 2009</td>\n",
@@ -83,7 +102,7 @@
        "      <td>@Kenichan I dived many times for the ball. Man...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>1467811184</td>\n",
        "      <td>Mon Apr 06 22:19:57 PDT 2009</td>\n",
@@ -92,7 +111,7 @@
        "      <td>my whole body feels itchy and like its on fire</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>1467811193</td>\n",
        "      <td>Mon Apr 06 22:19:57 PDT 2009</td>\n",
@@ -101,7 +120,7 @@
        "      <td>@nationwideclass no, it's not behaving at all....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -110,7 +129,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1599995</th>\n",
+       "      <td>1599995</td>\n",
        "      <td>4</td>\n",
        "      <td>2193601966</td>\n",
        "      <td>Tue Jun 16 08:40:49 PDT 2009</td>\n",
@@ -119,7 +138,7 @@
        "      <td>Just woke up. Having no school is the best fee...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1599996</th>\n",
+       "      <td>1599996</td>\n",
        "      <td>4</td>\n",
        "      <td>2193601969</td>\n",
        "      <td>Tue Jun 16 08:40:49 PDT 2009</td>\n",
@@ -128,7 +147,7 @@
        "      <td>TheWDB.com - Very cool to hear old Walt interv...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1599997</th>\n",
+       "      <td>1599997</td>\n",
        "      <td>4</td>\n",
        "      <td>2193601991</td>\n",
        "      <td>Tue Jun 16 08:40:49 PDT 2009</td>\n",
@@ -137,7 +156,7 @@
        "      <td>Are you ready for your MoJo Makeover? Ask me f...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1599998</th>\n",
+       "      <td>1599998</td>\n",
        "      <td>4</td>\n",
        "      <td>2193602064</td>\n",
        "      <td>Tue Jun 16 08:40:49 PDT 2009</td>\n",
@@ -146,7 +165,7 @@
        "      <td>Happy 38th Birthday to my boo of alll time!!! ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1599999</th>\n",
+       "      <td>1599999</td>\n",
        "      <td>4</td>\n",
        "      <td>2193602129</td>\n",
        "      <td>Tue Jun 16 08:40:50 PDT 2009</td>\n",
@@ -189,7 +208,7 @@
        "[1600000 rows x 6 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
