Added readme and updated basemodels
Signed-off-by: CorEng <cormacenglish@gmail.com>

--- a/BaseModels.ipynb
+++ b/BaseModels.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "#Import vectorised tweets\n",
-    "vec_tweets = pd.read_csv(\"vec.csv\")"
+    "vec_tweets = pd.read_csv(\"data/vec.csv\")"
    ]
   },
   {
@@ -552,13 +552,6 @@
     "plt.legend()\n",
     "orig_frame = pd.DataFrame.from_dict(report_frame)\n",
     "orig_frame"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Word2Vec\n"
    ]
   },
   {
